Issue #10157: Fixed refleaks in pythonrun.c. Patch by Stefan Krah.